# ShenYin

./: .gitignore  Cargo.toml  README.md  app.py  build_exe.bat  build_macos.sh  local-workspace.spec  requirements.txt  start_local.bat
.github/workflows/: build-and-release.yml
docs/plans/: 2026-04-13-001-feat-rust-release-workflow-plan.md
docs/superpowers/plans/: 2026-03-30-macos-arm64-build-design.md  2026-03-30-macos-arm64-build-plan.md  2026-03-30-macos-arm64-build.md
docs/superpowers/specs/: 2026-03-30-macos-arm64-build-design.md  2026-04-13-rust-three-platform-build-design.md
packaging/macos/: Info.plist
pgpbox/: __init__.py  crypto.py  engine.py  gpg_engine.py  keystore.py  result_store.py  transport.py
scripts/: package-linux.sh  package-macos-app.sh  package-windows.ps1
src/: crypto.rs  engine.rs  lib.rs  main.rs  result_store.rs  server.rs  transport.rs
static/: app.js  style.css
templates/: index.html
tests/: api_flow.rs  crypto_contract.rs  smoke_contract.rs  test_app.py  test_crypto.py
