[package]
name = "shenyin"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.6", features = ["multipart"] }
bzip2 = "0.6.1"
flate2 = "1.1.4"
getrandom = "0.3.3"
pbkdf2 = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
tempfile = "3.23.0"
